<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    tools:context=".LogoutActivity">


    <TextView
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="please input carfully all informations below"
        android:fontFamily="@font/ubuntu_medium"
        android:textSize="@dimen/_13ssp" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilemail"
        android:layout_marginTop="@dimen/_30sdp"
        app:endIconMode="custom"
        app:counterEnabled="true"
        app:counterMaxLength="35"
        app:helperTextTextColor="@color/colorAccent"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:endIconDrawable="@drawable/ic_baseline_clear_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_email"
            android:hint="@string/enter_new_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilname"
        android:layout_marginTop="8dp"
        app:endIconMode="custom"
        app:counterEnabled="true"
        app:counterMaxLength="35"
        app:helperTextTextColor="@color/colorAccent"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:endIconDrawable="@drawable/ic_baseline_clear_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_name"
            android:hint="@string/enter_new_name"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:helperTextTextColor="@color/purple_500"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:hint="@string/enter_new_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:helperTextTextColor="@color/purple_500"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_confirm_password"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="12dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/save_informations"
        app:cornerRadius="100dp" />


</LinearLayout>

